--- a/eShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Index.cshtml
@@ -76,5 +76,6 @@
                 </tbody>
             </table>
         </div>
+        @await Component.InvokeAsync("Pager", Model)
     </div>
 </div>
