--- a/eShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Index.cshtml
@@ -12,7 +12,24 @@
 <!-- DataTales Example -->
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <a class="btn btn-success" asp-action="Create" asp-controller="User">Tạo mới</a>
+        <div class="row">
+            <div class="col-md-6 col-xs-12">
+                <a class="btn btn-success" asp-action="Create" asp-controller="User">Tạo mới</a>
+            </div>
+            <div class="col-md-6 col-xs-12">
+                <form asp-action="Index" method="get">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <input class="form-control mr-sm-2" value="@ViewBag.Keyword" type="text" placeholder="Search" aria-label="Search" name="keyword">
+                        </div>
+                        <div class="col-md-3">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
+                            <button class="btn btn-outline-dark my-2 my-sm-0" type="button" onclick="window.location.href='/User/Index'">Xoá</button>
+                        </div>
+                    </div>                                     
+                </form>
+            </div>
+        </div>
     </div>
     <div class="card-body">
         <div class="table-responsive">
